
    [php]
    $browser->with('response')->begin()->
      checkForm($browser->getArticleForm())->
    end();

If the response includes multiple forms you have the option of providing a CSS
selector to pinpoint which portion of the DOM to test:

    [php]
    $browser->with('response')->begin()->
      checkForm('ArticleForm', '#articleForm')->
    end();

Tasks
-----

The symfony CLI now attempts to detect the width of your terminal window and
formats lines to fit. If detection is not possible the CLI defaults to 78
columns wide.

### `sfTask::askAndValidate()`

There is a new `sfTask::askAndValidate()` method to ask a question to the user
and validates its input:

    [php]
    $anwser = $this->askAndValidate('What is you email?', new sfValidatorEmail());

The method also accepts an array of options (see the API doc for more
information).

### `symfony:test`

From time to time, developers need to run the symfony test suite to check that
symfony works well on their specific platform. Until now, they had to know the
`prove.php` script bundled with symfony to do that. As of symfony 1.3, there
is a built-in task, `symfony:test` that launches the symfony core test suite
from the command line, like any other task:

    $ php symfony symfony:test

If you were used to run `php test/bin/prove.php`, you should now run the
equivalent `php data/bin/symfony symfony:test` command.

### `project:deploy`

The `project:deploy` task has been slightly improved. It now displays the
progress of the files transfer in real-time, but only if the `-t` option is
passed. If not, the task is silent, except for errors of course. Speaking of
errors, if one occurs, the output is on a red background to easy problem
identification.

### `generate:project`

As of symfony 1.3, Doctrine is the default configured ORM when executing the
`generate:project` task:

    $ php /path/to/symfony generate:project foo

To generate a project for Propel, use the `--orm` option:
